[package]
name = "redacted"
version = "0.0.1"
edition = "2021"
authors = ["Redacted Studios", "Nathan Russell"]
description = "A Redacted Studios application."
readme = "README.md"
homepage = "http://redactedstudios.crypto"
repository = "https://github.com/Redacted-Studios/Redacted-Engine"
license-file = "LICENSE.txt"
publish = false
# build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# sdl2 = "0.35"
# raylib = { version = "3.7", git = "https://github.com/deltaphc/raylib-rs" }

[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"
default-features = false
